force-app/main/default/objects/Quote/fields/Account_Id_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to look up and filter the account</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>