force-app/main/default/objects/Quote/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <formula>Opportunity.Delivery_Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery City</label>
    <type>Text</type>
</CustomField>