force-app/main/default/objects/Quote/fields/Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Country__c</fullName>
    <formula>Opportunity.Delivery_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Country</label>
    <type>Text</type>
</CustomField>