force-app/main/default/objects/Quote/fields/Delivery_County__c.field-meta.xml
<CustomField>
    <fullName>Delivery_County__c</fullName>
    <formula>Opportunity.Delivery_Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery County</label>
    <type>Text</type>
</CustomField>