force-app/main/default/objects/Quote/fields/Delivery_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Post_Code__c</fullName>
    <formula>Opportunity.Delivery_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Post Code</label>
    <type>Text</type>
</CustomField>