force-app/main/default/objects/Quote/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <formula>Opportunity.Delivery_Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Street</label>
    <type>Text</type>
</CustomField>