force-app/main/default/objects/Quote/fields/Freeze_Quote__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to change the record type to read-only see process builder</description>
    <inlineHelpText>Used to change the Record Type to read-only Notify Admin to Unlock</inlineHelpText>
    <label>Freeze Quote</label>
    <type>Checkbox</type>
</CustomField>