force-app/main/default/objects/Quote/fields/OM_AccountName__c.field-meta.xml
<CustomField>
    <fullName>OM_AccountName__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>