force-app/main/default/objects/Quote/fields/OM_VID_AgreedTerms__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_AgreedTerms__c</fullName>
    <description>Shows Related Account&apos;s agreed terms</description>
    <formula>TEXT( Opportunity.Account.OM_VID_AgreedTerms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Agreed terms de la cuenta relacionada</inlineHelpText>
    <label>Agreed Terms</label>
    <type>Text</type>
</CustomField>