force-app/main/default/objects/Quote/fields/OM_VID_DetallesAdicionales__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_DetallesAdicionales__c</fullName>
    <label>Detalles Adicionales</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>