force-app/main/default/objects/Quote/fields/OM_VID_Fecha_de_envio_oferta__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Fecha_de_envio_oferta__c</fullName>
    <label>Fecha de envío oferta</label>
    <type>DateTime</type>
</CustomField>