force-app/main/default/objects/Quote/fields/OM_VID_Idioma__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Idioma__c</fullName>
    <description>Guarda el valor del campo Idioma de la Oportunidad relacionada</description>
    <formula>TEXT(Opportunity.OM_VID_Idioma__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fórmula que guarda el valor del idioma de la Oportunidad relacionada</inlineHelpText>
    <label>Idioma</label>
    <type>Text</type>
</CustomField>