force-app/main/default/objects/Quote/fields/OM_VID_Oferta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Oferta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oferta Enviada</label>
    <type>Checkbox</type>
</CustomField>