force-app/main/default/objects/Quote/fields/OM_VID_OpportunityAgreedTerms__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_OpportunityAgreedTerms__c</fullName>
    <label>Opportunity Agreed Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>