force-app/main/default/objects/Quote/fields/OM_VID_OpportunityPaymentMethods__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_OpportunityPaymentMethods__c</fullName>
    <label>Opportunity Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>