force-app/main/default/objects/Quote/fields/OM_VID_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_PaymentMethod__c</fullName>
    <description>Shows Related Account&apos;s payment method</description>
    <formula>TEXT(Opportunity.Account.OM_VID_PaymentMethods__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forma de pago de la cuenta relacionada</inlineHelpText>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>