force-app/main/default/objects/Quote/fields/Pack_Spec_Details__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec_Details__c</fullName>
    <label>Pack Spec Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>