force-app/main/default/objects/Quote/fields/Packaging_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packaging Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Id_Copy__c</field>
            <operation>equals</operation>
            <valueField>Packaging_Agreement__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Packaging_Agreement__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>