force-app/main/default/objects/Quote/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Existing rebate on the Account</description>
    <label>Existing Rebate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Rebate__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Id_Copy__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rebate__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>