force-app/main/default/objects/Quote/recordTypes/OM_VID_Quote_Fifty.recordType-meta.xml
<RecordType>
    <fullName>OM_VID_Quote_Fifty</fullName>
    <active>true</active>
    <description>Record Type para las Quotes de Omega</description>
    <label>OM Quote Fifty</label>
</RecordType>