force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>CreatedBy</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>